package com.dah.enums;

public enum ReviewOutcome {
  ACCEPTED,
  REJECTED,
  ATTENTION,
  INCOMPLETE;
}
