package com.dah.observer.events;

public interface DomainEvent {
    
}
